// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountFields/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-hSdWYo RLebi"
  >
    <div
      class="sc-iAyFgw kFSVyG"
    >
      <button
        type="button"
        class="sc-htpNat fpAZyb"
        data-testid="max-btn"
        tabindex="-1"
      >
        MAX
      </button>
      <div>
        <label
          class="sc-fjdhpX ggenJw"
          for="ethAmount"
        >
          Amount (ETH)
        </label>
        <input
          class="sc-jzJRlG eYjBul"
          type="text"
          id="ethAmount"
          data-testid="ethAmount-field"
          placeholder="0.00"
          value=""
        />
      </div>
    </div>
    <div
      class="sc-dnqmqq bjegIR"
    >
      <svg
        class="sc-bxivhb hXQRLM"
        viewBox="0 0 24 24"
      >
        <path
          d="M24 7.136v.96H1.642l4.464 4.464-.682.682-5.28-5.28a.475.475 0 0 1 0-.682L5.424 2l.682.682-4.464 4.464H24v-.01zM18.576 11.6l-.682.682 4.464 4.464H0v.96h22.358l-4.464 4.464.682.681 5.28-5.28a.475.475 0 0 0 0-.681l-5.28-5.29z"
        />
      </svg>
    </div>
    <div
      class="sc-iAyFgw kFSVyG"
    >
      <div>
        <label
          class="sc-fjdhpX ggenJw"
          for="usdAmount"
        >
          Amount (USD)
        </label>
        <input
          class="sc-jzJRlG eYjBul"
          type="text"
          id="usdAmount"
          data-testid="usdAmount-field"
          placeholder="0.00"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<GasEditor/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-hSdWYo RLebi"
  >
    <div
      class="sc-iAyFgw kFSVyG"
    >
      <div>
        <label
          class="sc-fjdhpX ggenJw"
          for="gasLimit"
        >
          Gas Limit (Units)
        </label>
        <input
          class="sc-jzJRlG eYjBul"
          type="text"
          id="gasLimit"
          data-testid="gas-limit-field"
          value="21000"
        />
      </div>
    </div>
    <div
      class="sc-dnqmqq cnSjSH"
    />
    <div
      class="sc-iAyFgw kFSVyG"
    >
      <div>
        <label
          class="sc-fjdhpX ggenJw"
          for="gasPrice"
        >
          Gas Price (Gwei)
        </label>
        <input
          class="sc-jzJRlG eYjBul"
          type="text"
          id="gasPrice"
          data-testid="gas-price-field"
          value="1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SendETHForm/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-eHgmQL AlcTC"
  >
    <div
      class="sc-dnqmqq fShSQy"
    >
      <form
        data-testid="sendEth-form"
        novalidate=""
        id="sendForm"
      >
        <div>
          <label
            class="sc-fjdhpX ggenJw"
            for="toAddress"
          >
            Send to Address
          </label>
          <input
            class="sc-jzJRlG eYjBul"
            type="text"
            id="toAddress"
            placeholder="e.g. 0x2345678998765434567"
            data-testid="toAddress-field"
            value=""
          />
        </div>
        <div
          class="sc-dnqmqq iqdELP"
        >
          <div
            class="sc-hSdWYo RLebi"
          >
            <div
              class="sc-iAyFgw kFSVyG"
            >
              <button
                type="button"
                class="sc-htpNat fpAZyb"
                data-testid="max-btn"
                tabindex="-1"
              >
                MAX
              </button>
              <div>
                <label
                  class="sc-fjdhpX ggenJw"
                  for="ethAmount"
                >
                  Amount (ETH)
                </label>
                <input
                  class="sc-jzJRlG eYjBul"
                  type="text"
                  id="ethAmount"
                  data-testid="ethAmount-field"
                  placeholder="0.00"
                  value=""
                />
              </div>
            </div>
            <div
              class="sc-dnqmqq bjegIR"
            >
              <svg
                class="sc-bxivhb hXQRLM"
                viewBox="0 0 24 24"
              >
                <path
                  d="M24 7.136v.96H1.642l4.464 4.464-.682.682-5.28-5.28a.475.475 0 0 1 0-.682L5.424 2l.682.682-4.464 4.464H24v-.01zM18.576 11.6l-.682.682 4.464 4.464H0v.96h22.358l-4.464 4.464.682.681 5.28-5.28a.475.475 0 0 0 0-.681l-5.28-5.29z"
                />
              </svg>
            </div>
            <div
              class="sc-iAyFgw kFSVyG"
            >
              <div>
                <label
                  class="sc-fjdhpX ggenJw"
                  for="usdAmount"
                >
                  Amount (USD)
                </label>
                <input
                  class="sc-jzJRlG eYjBul"
                  type="text"
                  id="usdAmount"
                  data-testid="usdAmount-field"
                  placeholder="0.00"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-dnqmqq iqdELP"
        >
          <div
            class="sc-hSdWYo bDJzcK"
          >
            <div
              class="sc-hSdWYo jGdHOj"
            >
              <span
                class="sc-cvbbAY ctQnZR"
              >
                Gas Limit: 
                21000
                (Units)
              </span>
              <span
                class="sc-cvbbAY ctQnZR"
              >
                Gas Price: 
                1
                (Gwei)
              </span>
            </div>
            <button
              type="button"
              class="sc-htpNat bqwpzm"
              data-testid="edit-gas-btn"
              tabindex="-1"
            >
              EDIT GAS
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="sc-csuQGl gUwZNY"
    >
      <button
        type="submit"
        class="sc-bwzfXH gAMukr"
        form="sendForm"
      >
        Review Send
      </button>
    </div>
  </div>
</div>
`;
